2005-12-22    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* args.c, constClass.c, instance.c, objectpath.c: 
	Fixed 1387264. Check for NULL array and pass in the correct pointer to the
	array if not NULL.

	* cimXmlGen.c:
	Also 1387264. Check for NULL array before looking for the element count.

2005-12-20    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* httpComm.c: 
	Related to 1356235. Enhanced tracing and implemented an explicit
	commClose function.
	
	* httpAdapter.c: 
	Related to 1356235. Made the error responses more graceful in respect
	to the client. I.e., keep the connection open for some kind of errors.

2005-12-19    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* cimXmlGen.c: 
	Fixed 1382741: Added to code to insert host and namespace information to instance
	names. Also added logic to create the correct (local) path XML.

2005-12-18    <mihajlov@localhost.localdomain>

	* objectpath.c: 
	Fixed 1381312. Corrected the objectpath string parser to deal with reference type
	properties.

	* internalProvider.c: 
	Fixed 1384612. In the object path normalization the namespace for
	REF properties is included. If not specified, then the namespace of
	the object path itself is used.

	* providerMgr.c: 
	Fixed 1382712. Duplicate keys (class names) now for provider hashtables
	in order to avoid invalid accesses. Added key release function for
	the hashtables.

	* cimXmlRequest.c: 
	Fixed 1382712. Delay release of sreq structures in various functions.

2005-12-17  a3schuur

	* Makefile.am, classProviderGz.c: 
	Fixed 1386191. Added caching ClassProviderGz.c,
	optionally accepting compressed classSchemas files.

	This provider does not keep complete classSchemas file in memory
	but uses a cache instead. Cache limit is currently set to a maximum
	of 16 classes. When reaching this limit the least recently used
	class is removed from the cache. All class retrieval goes through
	the cache except for enumerateClasses operations, which causes